[tool.poetry]
name = "tinder-export"
version = "0.0.1"
description = ""
authors = ["mldangelo <michael.l.dangelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
